@@ -1,3 +1,7 @@
+2005-02-07  Brian Lindauer  <jbl@localhost.localdomain>
+
+	* lib/b_ringdir.c (bk_ringdir_init): Update checkpoint file at startup.
+
 2005-01-20  James Tanis  <jtt@cheviot.sysdetect.com>
 
 	* lib/b_run.c (bk_run_once): Protect against the generally
